algumas mdificações no html para conseguir utilizar

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 <!--forms e descobri se é o método get ou post-->
+<form>
+    <div>
+        <label for="value">Valor inicial</label>
+        <input type="number" id="value">
+        <br>
+    </div>
+    <div>
+        <label>Taxa de Juros</label>
+        <input type="number" id="value">
+        <br>
+    </div>
+    <div>
+        <label>Tempo que o valor ficará investido</label>
+        <input type="number" id="value">
+    </div>
+</form>
+
+<form></form>
